[package]
name = "superdevs-assignment"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
solana-sdk = "2.0"
spl-token = "4.0"
ed25519-dalek = "2"
bs58 = "0.5"
base64 = "0.21"
