[package]
name = "superdevs-assignment"
version = "0.1.0"
edition = "2024"

[dependencies]
spl-token = { version = "4.0", features = ["no-entrypoint"] }
ed25519-dalek = "2"
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
solana-sdk = "2.0"
bs58 = "0.5"
base64 = "0.21"
spl-associated-token-account = { version = "7.0.0", features = [
    "no-entrypoint",
] }
